--- a/package.json
+++ b/package.json
@@ -1,66 +1,65 @@
 {
-  "name": "trpc-remix",
-  "version": "10.0.0-alpha.40.1",
-  "description": "tRPC Remix lib",
-  "author": "ggrandi",
-  "license": "MIT",
-  "homepage": "https://github.com/ggrandi/trpc-remix",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ggrandi/trpc-remix.git"
-  },
-  "scripts": {
-    "build": "rm -rf dist/ && pnpm tsc && pnpm node ./esbuild.mjs",
-    "prepublish": "pnpm build"
-  },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "typings": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "default": "./dist/index.js"
-    },
-    "./adapter": {
-      "import": "./dist/adapter/index.mjs",
-      "require": "./dist/adapter/index.js",
-      "default": "./dist/adapter/index.js"
-    }
-  },
-  "files": [
-    "README.md",
-    "dist",
-    "adapter"
-  ],
-  "peerDependencies": {
-    "@remix-run/node": "*",
-    "@trpc/client": "^10.0.0-alpha.40",
-    "@trpc/react": "^10.0.0-alpha.40",
-    "@trpc/server": "^10.0.0-alpha.40",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "react-query": "^3.37.0"
-  },
-  "devDependencies": {
-    "@remix-run/node": "^1.6.5",
-    "@trpc/client": "=10.0.0-alpha.40",
-    "@trpc/react": "=10.0.0-alpha.40",
-    "@trpc/server": "=10.0.0-alpha.40",
-    "@types/express": "^4.17.12",
-    "@types/react": "^18.0.15",
-    "express": "^4.17.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-query": "^3.39.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "zod": "^3.0.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "esbuild": "^0.14.50"
-  }
+	"name": "trpc-remix",
+	"version": "0.0.1",
+	"description": "tRPC Remix lib",
+	"author": "ggrandi",
+	"license": "MIT",
+	"scripts": {
+		"build": "rm -rf dist/ && pnpm tsc && pnpm node ./esbuild.mjs",
+		"prepublish": "pnpm build"
+	},
+	"main": "dist/index.js",
+	"module": "dist/index.mjs",
+	"typings": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.js",
+			"default": "./dist/index.js"
+		},
+		"./adapter": {
+			"import": "./dist/adapter/index.mjs",
+			"require": "./dist/adapter/index.js",
+			"default": "./dist/adapter/index.js"
+		}
+	},
+	"files": [
+		"README.md",
+		"dist",
+		"adapter"
+	],
+	"peerDependencies": {
+		"@remix-run/node": "^1.9.0",
+		"@tanstack/react-query": "^4.20.4",
+		"@trpc/client": "^10.5.0",
+		"@trpc/react-query": "^10.5.0",
+		"@trpc/server": "^10.5.0",
+		"react": ">=16.8.0",
+		"react-dom": ">=16.8.0"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.12",
+		"@types/react": "^18.0.15",
+		"express": "^4.17.1",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-query": "^3.39.2",
+		"tslib": "^2.4.0",
+		"typescript": "^4.7.4",
+		"zod": "^3.0.0"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"@remix-run/node": "^1.9.0",
+		"@tanstack/react-query": "^4.20.4",
+		"@trpc/client": "^10.5.0",
+		"@trpc/react-query": "^10.5.0",
+		"@trpc/server": "^10.5.0",
+		"esbuild": "^0.14.50",
+		"react": ">=16.8.0",
+		"react-dom": ">=16.8.0",
+		"react-router-dom": "^6.5.0"
+	}
 }
